Update 'a7cjlzip0-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:908d18b28e602c7b1ccb72f1843509d3d42b48fa@sha256:fee799b4a0781ebfcb0d4eac8d13be283ed3149f0c00e16b1c024a56c375a2c8

--- a/components/a7cjlzip0-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/a7cjlzip0-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: a7cjlzip0-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:908d18b28e602c7b1ccb72f1843509d3d42b48fa@sha256:fee799b4a0781ebfcb0d4eac8d13be283ed3149f0c00e16b1c024a56c375a2c8
+          name: container-image
